# advent_of_code

./: .gitignore  README.md  pyproject.toml  res_file.txt  test.ipynb  utils.py
2019/01/: main.py
2019/02/: main.py
2019/03/: main.py
2019/04/: main.py
2019/05/: main.py
2019/06/: example.txt  main.py
2019/07/: main.py
2019/08/: main.py
2019/09/: main.py
2019/10/: main.py
2019/11/: main.py
2019/12/: main.py
2020/01/: main.py
2020/02/: main.py
2020/03/: main.py
2020/04/: example.txt  main.py
2020/05/: main.py
2020/06/: main.py
2020/07/: main.py
2020/08/: main.py
2020/09/: main.py
2020/10/: main.py
2020/11/: main.py
2020/12/: main.py
2020/13/: main.py
2020/14/: main.py
2020/15/: main.py
2020/16/: example.txt  main.py
2020/17/: main.py
2020/18/: main.py
2020/19/: main.py
2020/20/: main.py
2020/21/: main.py
2020/22/: main.py
2020/23/: main.py
2020/24/: main.py
2020/25/: main.py
2021/01/: main.py
2021/02/: main.py
2021/03/: main.py
2021/04/: main.py
2021/05/: main.py
2021/06/: main.py
2021/07/: main.py
2021/08/: example.txt  main.py
2021/09/: main.py
2021/10/: main.py
2021/11/: main.py
2021/12/: main.py
2021/13/: main.py
2021/14/: main.py
2021/15/: main.py
2021/16/: main.py
2021/17/: main.py
2021/18/: example.txt  main.py  main_2.py
2021/19/: main.py
2021/20/: main.py
2021/21/: main.py
2021/22/: main.py
2021/23/: main.py
2022/01/: PROBLEM.md  main.py
2022/02/: PROBLEM.md  main.py
2022/03/: PROBLEM.md  main.py
2022/04/: PROBLEM.md  main.py
2022/05/: PROBLEM.md  main.py
2022/06/: PROBLEM.md  main.py
2022/07/: PROBLEM.md  main.py
2022/08/: PROBLEM.md  main.py
2022/09/: PROBLEM.md  main.py
(+127 files in other folders)
