[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Alessio <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.10.1,<3.12"
numpy = "^2.0"
numba = "^0.60.0"
scipy = "^1.14.1"
networkx = "^3.4.2"
parsimonious = "^0.10.0"
matplotlib = "^3.9.3"
notebook = "^7.2.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
