[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "notebook>=7.5.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "parsimonious>=0.11.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
]

[tool.ruff]
fix = true
